--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "cross-fetch": "^3.1.5",
     "eventsource-parser": "^0.1.0",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "tencentcloud-sdk-nodejs": "^4.0.567"
+    "multer": "^1.4.5-lts.1"
   }
 }
